import { View, Text } from "react-native";

export default function NotificationsScreen() {
  return (
    <View className="flex-1 items-center justify-center bg-white">
      <Text className="text-xl font-bold">Notificações</Text>
      <Text className="text-gray-500 mt-2">Sprint 5 — A implementar</Text>
    </View>
  );
}

